[package]
name = "ambient_fb_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_project = { git = "https://github.com/AmbientRun/Ambient.git", rev = "5cba1c1d" }
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
parse-display = "0.8"
serde_plain = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
firebase-wasm = { git = "https://github.com/FredrikNoren/firebase-wasm-rs.git", rev = "32ded13" }
serde-wasm-bindgen = { git = "https://github.com/FredrikNoren/serde-wasm-bindgen.git", rev = "c8bfece" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
firestore = "0.32"
