[package]
name = "ambient_fb_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
parse-display = "0.8"
serde_plain = "1.0"
ambient_package = { git = "https://github.com/AmbientRun/Ambient.git", rev = "9bcfdba" }
anyhow = "1"
ts-rs = "7.0"
semver = { version = "1", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firebase-wasm = { git = "https://github.com/AmbientRun/firebase-wasm-rs.git" }
serde-wasm-bindgen = { git = "https://github.com/AmbientRun/serde-wasm-bindgen.git" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
firestore = "0.32"
